validaciones a la hora de escribir un comentario

--- a/views/vervideo.ejs
+++ b/views/vervideo.ejs
@@ -70,7 +70,7 @@
                             class="formcomment flex">
                             <label>Comentario:</label><textarea type="text" placeholder="Comentario" id="comment"
                                 name="comment" class="formatextarea" maxlength="250"></textarea>
-                            <label id="area-error">ERROR NO PUEDE ESCRIBIR MAS DE 250 CARACTERES</label>
+                            <label id="area-error">Maximo 250 caracteres </label>
                             <button type="submit" class="btnComment">Comentar</button>
                         </form>
                         <%}else{%>
