-Validaciones a la hora de ingresar un tema de foro -validaciones a los comentarios dentro de un foro

--- a/public/css/foro.css
+++ b/public/css/foro.css
@@ -236,7 +236,18 @@ p a:hover {
 } */
 
 /*Responsive*/
-
+.formcomment {
+  display: flex;
+  flex-direction: column;
+}
+#area-error {
+  display: none;
+  color: red;
+}
+#title-error {
+  display: none;
+  color: red;
+}
 @media (max-width: 900px) {
   .formforo {
     width: 100%;
