--- a/views/acercaDNosotros.ejs
+++ b/views/acercaDNosotros.ejs
@@ -9,7 +9,7 @@
     <div class="mvi">
         <div class="arreglo">
             <div class="im">
-                <img src="/img/EISI.png">
+                <img src="/img/EISI.jpg">
             </div>
             <div class="quienesSomos">
                 <h3>Historia</h3>
@@ -41,7 +41,7 @@
         </div>
     </div>
     <div class="img">
-        <img src="/img/EISI.png">
+        <img src="/img/EISI.jpg">
     </div>
 
 </div>
