--- a/public/css/contac.css
+++ b/public/css/contac.css
@@ -1,7 +1,6 @@
 .formulario{
     margin: 3%;
     padding: 0%;
-
     display:flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -16,12 +15,13 @@
     font-size: 16px;
     border-radius: 30px;
     width: 40%;
-
+    height: 38em;
     display:flex;
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: left;
     align-items: left;
+    line-height: 27px;
     
 }
 h3{
@@ -36,9 +36,9 @@ h3{
     font-size: 18px;
     border-radius: 30px;
     width: 100%;
-    height: 100%;
     font-weight: bold;
 }
+
 .formulario-contacto label, input, textarea{
     display: block;
     width: 100%;
@@ -47,7 +47,7 @@ h3{
     border-radius: 4px;
     text-align: justify;
     font-size: 18px;
-
+    resize: none;
 }
 p{
 
@@ -65,7 +65,8 @@ button{
     color: #ffffff;
     font-size: 18px;
     padding: 1%;
-    width: 100px;
+    width: 150px;
+    height: 50px;
 
 }
 button:hover{
@@ -85,7 +86,7 @@ button:hover{
     font-size: 16px;
     border-radius: 30px;
     width: 40%;
-
+    height: 38em;
     display:flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -94,9 +95,10 @@ button:hover{
     
 }
 iframe{
+    line-height: 27px;
     border-radius: 15px;
     width:100%;
-    height:24em;
+    height:30em;
     border:0;
 }
 
@@ -112,13 +114,16 @@ iframe{
     border-radius: 20px;
     width: 100%;
     margin: 5%;
+    height: 100%;
 }
 .formulario .contacto .formulario-contacto{
     font-size: 16px;
     border-radius: 20px;
+    line-height: 0%;
 }
 .formulario-contacto label, input, textarea{
     font-size: 16px;
+    resize: none;
 
 }
 .formulario .mapa{
