--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,94 +1,118 @@
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body{
+    margin: 0%;
+    padding: 0%;
+    background-color: #545474;
+}
+
 h1{
     color: #242434;
     text-align: center;
-    margin: 0;
     font-size: 25px;
-    margin-top: 15px;
     margin-bottom: 15px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .pos{
+    padding: 0%;
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+    width: 80%;
     position:absolute;
     top:50%;
     left: 50%;
     transform: translate(-50%,-50%);
 }
 
-.loginform, .registerform{
-    width: 450px;
-    margin: auto;
+
+.pos .loginform, .pos .registerform{
     background-color: lightgrey;
-    padding: 10px 20px;
-    box-sizing: border-box;
-    margin-top: 20px;
-    border-radius: 5px;
-    text-align: center;
+    padding: 2%;
+    color:#000000;
+    font-size: 16px;
+    border-radius: 10px;
+    width: 40%;
+
+    display:flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: left;
+    align-items: left;
 }
 
-input{
+.pos .loginform form{
+    background-color: none;
+    color:#000000;   
+    font-size: 18px;
+    border-radius: 30px;
+    width: 100%;
+    height: 100%;
+    font-weight: bold;
+}
+
+.pos .registerform form{
+    background-color: none;
+    color:#000000;   
+    font-size: 18px;
+    border-radius: 30px;
+    width: 100%;
+    height: 100%;
+    font-weight: bold;
+}
+
+form input{
     display: block;
     width: 100%;
     padding: 12px 20px;
     border: 1px solid #ccc;
     border-radius: 4px;
     text-align: justify;
-    font-size: 15px;
-    margin-top: 5px;
-    margin-bottom: 5px;
+    font-size: 18px;
+    
 }
 
-.btnRegistrar, .btnCancelar{
+p{
+    display:flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+button{
     background-color: #242434;
     border-color:#242434;
     border-radius: 10px;
     text-align: center;
     color: #ffffff;
-    font-size: 16px;
+    font-size: 18px;
     padding: 1%;
-    width: 200px;
+    width: 40%;
 }
 
-.btnRegistrar:hover, .btnCancelar:hover{
-    background-color: #545474;
-    border-color:#545474;
+button:hover{
+    background-color: #3d3d77;
+    border-color:#3d3d77;
     border-radius: 10px;
     text-align: center;
     color: #fff;
-    font-size: 16px;
+    font-size: 18px;
     padding: 1%;
-    cursor: pointer;
-}
 
-.btnIniciar, .btnRegistro{
-    display: inline-block;
-    margin-top: 5px;
-    background-color: #242434;
-    border-color:#242434;
-    border-radius: 10px;
-    text-align: center;
-    color: #ffffff;
-    font-size: 16px;
-    padding: 1%;
-    width: 200px;
-}
-
-.btnIniciar:hover, .btnRegistro:hover{
-    background-color: #545474;
-    border-color:#545474;
-    border-radius: 10px;
-    text-align: center;
-    color: #fff;
-    font-size: 16px;
-    padding: 1%;
-    cursor: pointer;
 }
 
 a, a:hover{
     text-decoration: none;
     color: #fff;
 }
-
 
 
 /*login responsivo*/
@@ -100,6 +124,17 @@ a, a:hover{
 
     .registerform{
         width: 100%;
+    }
+
+    button{
+        background-color: #242434;
+        border-color:#242434;
+        border-radius: 10px;
+        text-align: center;
+        color: #ffffff;
+        font-size: 18px;
+        padding: 1%;
+        width: 80%;
     }
     
 }
