--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
     <link rel="stylesheet" type="text/css" href="/css/login.css">
+    <link rel="shortcut icon" href="/img/icono.jpg">
 </head>
 
 <body> 
