--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,142 +1,148 @@
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-body{
-    margin: 0%;
-    padding: 0%;
-    background-color: #545474;
+body {
+  margin: 0%;
+  padding: 0%;
+  background-color: #545474;
 }
 
-h1{
-    color: #242434;
-    text-align: center;
-    font-size: 25px;
-    margin-bottom: 15px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+h1 {
+  color: #242434;
+  text-align: center;
+  font-size: 25px;
+  margin-bottom: 15px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.pos{
-    padding: 0%;
-    display:flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-around;
-    width: 80%;
-    position:absolute;
-    top:50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+.pos {
+  padding: 0%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
+  width: 80%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
+.pos .loginform,
+.pos .registerform {
+  background-color: lightgrey;
+  padding: 2%;
+  color: #000000;
+  font-size: 16px;
+  border-radius: 10px;
+  width: 40%;
 
-.pos .loginform, .pos .registerform{
-    background-color: lightgrey;
-    padding: 2%;
-    color:#000000;
-    font-size: 16px;
-    border-radius: 10px;
-    width: 40%;
-
-    display:flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: left;
-    align-items: left;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: left;
+  align-items: left;
 }
 
-.pos .loginform form{
-    background-color: none;
-    color:#000000;   
-    font-size: 18px;
-    border-radius: 30px;
+.pos .loginform form {
+  background-color: none;
+  color: #000000;
+  font-size: 18px;
+  border-radius: 30px;
+  width: 100%;
+  height: 100%;
+  font-weight: bold;
+}
+.loginform {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.pos .registerform form {
+  background-color: none;
+  color: #000000;
+  font-size: 18px;
+  border-radius: 30px;
+  width: 100%;
+  height: 100%;
+  font-weight: bold;
+}
+
+form input {
+  display: block;
+  width: 100%;
+  padding: 12px 20px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  text-align: justify;
+  font-size: 18px;
+}
+
+p {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.btnRegistro,
+.btnCancelar,
+.btnIniciar,
+.btnRegistrar {
+  background-color: #242434;
+  border-color: #242434;
+  border-radius: 10px;
+  text-align: center;
+  color: #ffffff;
+  font-size: 18px;
+  padding: 1%;
+  width: 40%;
+}
+
+.btnCancelar:hover,
+.btnRegistro:hover,
+.btnIniciar:hover,
+.btnRegistrar:hover {
+  background-color: #3d3d77;
+  border-color: #3d3d77;
+  border-radius: 10px;
+  text-align: center;
+  color: #fff;
+  font-size: 18px;
+  padding: 1%;
+}
+
+a,
+a:hover {
+  text-decoration: none;
+  color: #fff;
+}
+
+/*login responsivo*/
+
+@media (max-width: 900px) {
+  .loginform {
     width: 100%;
-    height: 100%;
-    font-weight: bold;
-}
+  }
 
-.pos .registerform form{
-    background-color: none;
-    color:#000000;   
-    font-size: 18px;
-    border-radius: 30px;
+  .registerform {
     width: 100%;
-    height: 100%;
-    font-weight: bold;
-}
+  }
 
-form input{
-    display: block;
-    width: 100%;
-    padding: 12px 20px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    text-align: justify;
-    font-size: 18px;
-    
-}
-
-p{
-    display:flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-}
-
-button{
+  button {
     background-color: #242434;
-    border-color:#242434;
+    border-color: #242434;
     border-radius: 10px;
     text-align: center;
     color: #ffffff;
     font-size: 18px;
     padding: 1%;
-    width: 40%;
+    width: 80%;
+  }
 }
-
-button:hover{
-    background-color: #3d3d77;
-    border-color:#3d3d77;
-    border-radius: 10px;
-    text-align: center;
-    color: #fff;
-    font-size: 18px;
-    padding: 1%;
-
-}
-
-a, a:hover{
-    text-decoration: none;
-    color: #fff;
-}
-
-
-/*login responsivo*/
-
-@media (max-width: 900px){
-    .loginform{
-        width: 100%;
-    }
-
-    .registerform{
-        width: 100%;
-    }
-
-    button{
-        background-color: #242434;
-        border-color:#242434;
-        border-radius: 10px;
-        text-align: center;
-        color: #ffffff;
-        font-size: 18px;
-        padding: 1%;
-        width: 80%;
-    }
-    
-}
-
-
