--- a/views/templates/head.ejs
+++ b/views/templates/head.ejs
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google-site-verification" content="z_Vxz3wBwb0aUMMyQrA6Ag2gkYl5d5LvcqNjpwJMWWs" />
+
+  <!--SEO-->
   <meta name="author" content="Miguel Angel Amaya Rodriguez" />
   <meta name="author" content="Christian Javier Ayala Guerra" />
   <meta name="author" content="Diego José Ayala Guerra" />
@@ -14,7 +16,44 @@
   <meta name="author" content="José Gustavo Pineda Delgado" />
   <meta name="author" content="William Enrique Vásquez Mancia" />
   <meta name="keywords" content="phpfordevs, php, devs" />
-  <meta name="description" content="phpfordevs" />
+  <meta name="title" content="PhpForDevs">
+  <meta name="description" content="Aprende PHP en phpfordevs para que puedas aprender, de manera fácil y rápida un nuevo lenguaje de programación para el desarrollo de sitios web, aplicaciones y más!">
+  
+  <meta property="PhpForDevs_com:available" content="1">
+  <meta property="PhpForDevs_com:category" content="Development">
+
+  <meta property="og:title" content="PhpForDevs">
+  <meta property="og:url" content="https://phpfordevs.herokuapp.com/">
+  <meta property="og:description" content="Aprende PHP en phpfordevs para que puedas aprender, de manera fácil y rápida un nuevo lenguaje de programación para el desarrollo de sitios web, aplicaciones y más!">
+  <meta property="og:type" content="PhpForDevs_com:course">
+  <meta property="og:site_name" content="PhpForDevs">
+  <meta data-react-helmet="true" property="og:locale" content="en_ES">
+  <meta data-react-helmet="true" property="og:type" content="website">
+
+  <meta name="fb:domain" content="https://www.heroku.com/">
+  <meta name="fb:title" content="PhpForDevs">
+  <meta name="fb:url" content="https://phpfordevs.herokuapp.com/">
+  <meta name="fb:description" content="Aprende PHP en phpfordevs para que puedas aprender, de manera fácil y rápida un nuevo lenguaje de programación para el desarrollo de sitios web, aplicaciones y más!">
+  <meta name="fb:site" content="phpfordevs">
+
+  <meta name="reddit:domain" content="https://www.heroku.com/">
+  <meta name="reddit:title" content="PhpForDevs">
+  <meta name="reddit:url" content="https://phpfordevs.herokuapp.com/">
+  <meta name="reddit:description" content="Aprende PHP en phpfordevs para que puedas aprender, de manera fácil y rápida un nuevo lenguaje de programación para el desarrollo de sitios web, aplicaciones y más!">
+  <meta name="reddit:site" content="phpfordevs">
+
+  <meta name="instagram:domain" content="https://www.heroku.com/">
+  <meta name="instagram:title" content="PhpForDevs">
+  <meta name="instagram:url" content="https://phpfordevs.herokuapp.com/">
+  <meta name="instagram:description" content="Aprende PHP en phpfordevs para que puedas aprender, de manera fácil y rápida un nuevo lenguaje de programación para el desarrollo de sitios web, aplicaciones y más!">
+  <meta name="instagram:site" content="phpfordevs">
+
+  <meta itemprop="name" content="PhpForDevs">
+  <meta itemprop="url" content="https://phpfordevs.herokuapp.com/">
+  <meta itemprop="description" content="Aprende PHP en phpfordevs para que puedas aprender, de manera fácil y rápida un nuevo lenguaje de programación para el desarrollo de sitios web, aplicaciones y más!">
+
+
+  <!--STYLE-->
   <link rel="stylesheet" type="text/css" href="/css/main.css" />
   <link rel="shortcut icon" href="/img/icono.jpg">
   <% if(ruta !='' ) {%>
