datos de ejemplo en la db

--- a/views/ejemplos.ejs
+++ b/views/ejemplos.ejs
@@ -10,7 +10,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <div class="ejem">Codigo EJemplo:</div>
+                        <div class="ejem">Codigo Ejemplo:</div>
                         <div class="contCodigo">
                             <a href="<%=data[i].url_post;%>" target="_blank">                                
                                  <img src="<%=data[i].url_imagen;%>">                             
