modificacion estatica en los videos

--- a/views/videos.ejs
+++ b/views/videos.ejs
@@ -14,7 +14,7 @@
                         </div>
                         <div class="videoinfo">
                             <strong class="title">
-                                <%=data[i].cod%>.<%= data[i].titulo %>
+                                <%=i%>.<%= data[i].titulo %>
                             </strong>
                             <p class="descripcion">
                                 <%= data[i].descripcion_video%>
