--- a/views/vervideo.ejs
+++ b/views/vervideo.ejs
@@ -10,7 +10,7 @@
                             <a href="/cursos/<%=lista[i].id_curso%>/videos/<%=lista[i].cod%>" class="flex">
                                 <i class="fas fa-play-circle fa-3x"></i>
                                 <strong class="title">
-                                    <%=i%>.<%=lista[i].titulo%>
+                                    <%=i+1%>.<%=lista[i].titulo%>
                                 </strong>
                             </a>
                         </li>
