--- a/views/videos.ejs
+++ b/views/videos.ejs
@@ -14,7 +14,7 @@
                         </div>
                         <div class="videoinfo">
                             <strong class="title">
-                                <%=i%>.<%= data[i].titulo %>
+                                <%=i+1%>.<%= data[i].titulo %>
                             </strong>
                             <p class="descripcion">
                                 <%= data[i].descripcion_video%>
