alt de imagenes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,17 +12,17 @@
                 <div class="cuadrados">
                     <a href="/cursos" class="Cuadrados">
                         <p class="textoimagen">Cursos</p>
-                        <img src="/img/cursos.jpg" width="70%" height="70%" alt="Gato">
+                        <img src="/img/cursos.jpg" width="70%" height="70%" alt="Cursos">
                     </a>
                 </div>
                 <div class="cuadrados">
                     <p class="textobienvenida">Bienvenidos a PhpForDevs</p>
-                    <img src="/img/bienvenidos.png" width="60%" height="80%">
+                    <img src="/img/bienvenidos.png" width="60%" height="80%" alt="Bienvenido a PhpForDevs" >
                 </div>
                 <div class="cuadrados">
                     <a href="/cuestionarios">
                         <p class="textoimagen">Cuestionarios</p>
-                        <img src="/img/cuestionario2.png" width="50%" height="90%" alt="Gato">
+                        <img src="/img/cuestionario2.png" width="50%" height="90%" alt="Cuestionarios">
                     </a>
                 </div>
             </div>
@@ -30,7 +30,7 @@
                 <div class="cuadrados">
                     <a href="/ejemplos">
                         <p class="textoimagen">Ejemplos</p>
-                        <img src="/img/phplogo.png" width="60%" height="75%" alt="Gato">
+                        <img src="/img/phplogo.png" width="60%" height="75%" alt="Ejemplos">
                     </a>
                 </div>
                 <div class="cuadradosT">
@@ -40,7 +40,7 @@
                 <div class="cuadrados">
                     <a href="/foro">
                         <p class="textoimagen">Foro</p>
-                        <img src="/img/foro.png" width="60%" height="80%" alt="Gato">
+                        <img src="/img/foro.png" width="60%" height="80%" alt="Foro">
                     </a>
                 </div>
             </div>
